--- a/UI/src/Components/Navbar/Navbar.css
+++ b/UI/src/Components/Navbar/Navbar.css
@@ -11,8 +11,7 @@ nav {
     background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
     height: 100%;
     display: flex;
-    left:5%;
-    /*justify-content: center;*/
+    justify-content: center;
     align-items: center;
     position: relative;
 }
