--- a/UI/src/Components/Navbar/Navbar.css
+++ b/UI/src/Components/Navbar/Navbar.css
@@ -14,14 +14,19 @@ nav {
     justify-content: right;
     align-items: center;
     position: relative;
+    text-color: white;
 }
 .items {
     margin-right: 20px;
     font-size: 20px;
-    /*text-transform: uppercase;*/
     color: #f1f1f1;
     cursor: pointer;
 }
+.items a {
+    text-decoration: none;
+    color: white;
+}
+
 
 .btn {
     display: none;
